adiciona exercicio 2 de objeto

--- a/objects/ex2/main.css
+++ b/objects/ex2/main.css
@@ -1,9 +1,9 @@
-.img-rounded {
+ .img-rounded {
   border-radius: 50%;
   width: 100px;
   height: 100px;
 }
-.avatar {
+.card-avatar {
   width: 20%;
   display: inline-block;
   text-align: center;
@@ -11,4 +11,8 @@
 
 .green {
   background-color: green
+}
+
+.red{
+  background-color: crimson;
 }
