--- a/objects/ex1/main.css
+++ b/objects/ex1/main.css
@@ -17,3 +17,12 @@ button.pequeno{
   background-color: green;
   border-radius: 5px;
 }
+
+.azul{
+  background-color: cornflowerblue;
+}
+
+button.medio{
+  width: 170px;
+  height: 100px;
+}
